[package]
name = "rfc1700"
version = "0.1.2"
authors = ["Dylan McKay <me@dylanmckay.io>"]

description = "Constants defined in RFC 1700"
documentation = "https://docs.rs/rfc1700"
repository = "https://github.com/dylanmckay/rfc1700"

readme = "README.md"
license = "MIT"

keywords = ["rfc1700", "rfc", "ietf"]
