[package]
name = "rfc1700"
version = "1.0.0"
authors = ["Dylan McKay <me@dylanmckay.io>"]
edition = "2018"

description = "Constants defined in RFC 1700"
documentation = "https://docs.rs/rfc1700"
repository = "https://github.com/dylanmckay/rfc1700"

readme = "README.md"
license = "MIT"

keywords = ["rfc1700", "rfc", "ietf"]
